--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,5 +63,6 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
     implementation "de.hdodenhof:circleimageview:3.0.1"
     implementation "com.jakewharton:butterknife:10.1.0"
+    implementation "org.greenrobot:eventbus:3.1.1"
     annotationProcessor "com.jakewharton:butterknife-compiler:10.1.0"
 }
