--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,5 @@ dependencies {
     implementation "com.jakewharton:butterknife:10.1.0"
     implementation "org.greenrobot:eventbus:3.1.1"
     annotationProcessor "com.jakewharton:butterknife-compiler:10.1.0"
+    implementation "com.github.andremion:counterfab:1.2.2"
 }
