--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,23 @@ dependencies {
     implementation "org.greenrobot:eventbus:3.1.1"
     annotationProcessor "com.jakewharton:butterknife-compiler:10.1.0"
     implementation "com.github.andremion:counterfab:1.2.2"
+    def room_version = "2.4.3"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // optional - RxJava2 support for Room
+    implementation "androidx.room:room-rxjava2:$room_version"
+
+    // optional - RxJava3 support for Room
+    implementation "androidx.room:room-rxjava3:$room_version"
+
+    // optional - Guava support for Room, including Optional and ListenableFuture
+    implementation "androidx.room:room-guava:$room_version"
+
+    // optional - Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
+
+    // optional - Paging 3 Integration
+    implementation "androidx.room:room-paging:$room_version"
 }
